fix: change z-indexes, change cursor of button

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,29 +77,28 @@ button {
 
 .cover {
   position: relative;
-  z-index: -1;
   min-height: 757px;
   padding: 165px 50px 50px;
   background-image: url('../images/cover.jpg');
   background-repeat: no-repeat;
   background-position: 50% 0%;
   background-size: cover;
+  z-index: 1;
 }
 
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
   width: 100%;
   height: 100%;
   opacity: 60%;
   background-color: #000000;
+  z-index: -1;
 }
 
 .cover__title, .cover__description {
   position: relative;
-  z-index: 1;
   color: #FFFFFF;
 }
 
@@ -152,6 +151,7 @@ button {
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .lots {
@@ -181,7 +181,6 @@ button {
 
 .card {
   position: relative;
-  z-index: -1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -189,6 +188,7 @@ button {
   padding: 48px 40px;
   background-position: center;
   background-size: cover;
+  z-index: 1;
 }
 
 .card_type_film {
@@ -205,7 +205,6 @@ button {
 
 .card__title, .card__text {
   position: relative;
-  z-index: 1;
   color: #FFFFFF;
 }
 
